kuber-homeworks/2.3/configs/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.18.0
          volumeMounts:
          - name: index-html
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
          ports:
            - containerPort: 80
        - name: multitool
          ports:
            - containerPort: 8080
      volumes:
      - name: index-html
        configMap:
          name: index-html

---

apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
spec:
  selector:
    app: my-app
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
    - name: multitool-port
      protocol: TCP
      port: 8080
      targetPort: 8080
