kuber-homeworks/2.3/configs/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  labels:
    app: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx
          image: nginx:1.18.0
          volumeMounts:
          - name: vol-index
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
          ports:
            - containerPort: 80
      volumes:
      - name: vol-index
        configMap:
          name: index-html-tls

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-test
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
